# FractalProcessing

./: .gitignore  CMakeLists.txt  README.md  docs_config  main.cpp
cmake_in/: config.hpp.in
doc/doc_pages/: mainpage.md
doc/doc_resources/: doxy_configuration  dx_configuration
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _compare_doubles_8hpp.html  _compare_doubles_8hpp.js  _compare_doubles_8hpp_source.html  _complex_8cpp.html  _complex_8cpp.js  _complex_8cpp_8o_8d.html  _complex_8hpp.html  _complex_8hpp_source.html  _fractal_8cpp.html  _fractal_8cpp_8o_8d.html  _fractal_8hpp.html  _fractal_8hpp.js  _fractal_8hpp_source.html  _fractal_algorithm_8hpp.html  _fractal_algorithm_8hpp.js  _fractal_algorithm_8hpp_source.html  _fractal_algorithm_creator_8hpp.html  _fractal_algorithm_creator_8hpp_source.html  _fractal_coloring_8hpp.html  _fractal_coloring_8hpp.js  _fractal_coloring_8hpp_source.html  _fractal_coloring_creator_8hpp.html  _fractal_coloring_creator_8hpp_source.html  _gradient_8cpp.html  _gradient_8cpp_8o_8d.html  _gradient_8hpp.html  _gradient_8hpp.js  _gradient_8hpp_source.html  _image_8cpp.html  _image_8cpp_8o_8d.html  _image_8hpp.html  _image_8hpp.js  _image_8hpp_source.html  _image_saver_8cpp.html  _image_saver_8cpp_8o_8d.html  _image_saver_8hpp.html  _image_saver_8hpp.js  _image_saver_8hpp_source.html  (+143 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  (+38 more)
include/: CompareDoubles.hpp  Complex.hpp  Fractal.hpp  FractalAlgorithm.hpp  FractalAlgorithmCreator.hpp  FractalColoring.hpp  FractalColoringCreator.hpp  Gradient.hpp  Image.hpp  ImageSaver.hpp  JuliaSet.hpp  Mandelbrot.hpp  Newton.hpp  RGB.hpp  Scale.hpp  SmoothConvergence.hpp  SmoothDivergence.hpp  config.hpp
resources/: gtk3interface.glade  gtk4interface.glade
src/: Bitmap.cpp  Bitmap.hpp  BitmapFileHeader.hpp  BitmapInfoHeader.hpp  CompareDoubles.hpp  Complex.cpp  Complex.hpp  Fractal.cpp  Fractal.hpp  FractalAlgorithm.hpp  FractalAlgorithmCreator.hpp  FractalColoring.hpp  FractalColoringCreator.hpp  Gradient.cpp  Gradient.hpp  GradientGenerator.cpp  GradientGenerator.hpp  Image.cpp  Image.hpp  ImageSaver.cpp  JuliaSet.cpp  JuliaSet.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Newton.cpp  Newton.hpp  RGB.hpp  Scale.hpp  SmoothConvergence.hpp  SmoothDivergence.hpp  main.cpp
